updated to use webm or mp4 instead of gif to improve performance

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Nautilus: A Docker Compose yml file charting visualizer via Desktop application available for Mac, Windows, Linux"
     />
+    <meta
+      name="keywords"
+      content="docker compose, docker, docker-compose, compose, yaml, microservice, natuilus, devtool, visualizer, visualization, services, containers, ports, volumes, tyler, data, application, desktop, electron, software, charting, chart, oslabs, oslabs-beta, codesmith"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
