--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() {
+      window.gtag = function () {
         dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
+      };
+      window.gtag('js', new Date());
 
-      gtag('config', 'UA-163306530-1');
+      window.gtag('config', 'UA-163306530-1');
     </script>
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
