updated meta data to optimize for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     />
     <meta
       name="keywords"
-      content="docker compose, docker, docker-compose, compose, yaml, microservice, natuilus, devtool, visualizer, visualization, services, containers, ports, volumes, tyler, data, application, desktop, electron, software, charting, chart, oslabs, oslabs-beta, codesmith"
+      content="docker compose, docker, docker-compose, compose, yaml, microservice, natuilus, devtool, visualizer, visualization, services, containers, ports, volumes, tyler, data, application, desktop, electron, software, charting, chart, oslabs, oslabs-beta, codesmith, d3"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
