--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       name="description"
       content="Nautilus: A Docker Compose yml file charting visualizer via Desktop application available for Mac, Windows, Linux"
     />
+    <meta property="og:image" content="%PUBLIC_URL%/assets/nautiluscover.png" />
     <meta
       name="keywords"
       content="docker compose, docker, docker-compose, compose, yaml, microservice, natuilus, devtool, visualizer, visualization, services, containers, ports, volumes, tyler, data, application, desktop, electron, software, charting, chart, oslabs, oslabs-beta, codesmith"
